Fixing horizontal scroll in safari mobile

--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,6 @@ textarea {
 }
 
 .logo-large {
-  flex: 0;
   padding: 0 40px 40px;
   text-align: center;
 }
@@ -258,7 +257,7 @@ textarea {
 }
 
 .story__article {
-  flex: 1;
+
 }
 
 .story__title {
